<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/text_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/alert_stop_timer"
            android:textAlignment="center"
            android:textColor="@color/text_color_black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/silkscreen"
            android:text="@string/alert_stop_confirmation"
            android:textAlignment="center"
            android:textColor="@color/text_color_black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_heading" />

        <Button
            android:id="@+id/alert_button_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/silkscreen"
            android:text="@string/alert_button_cancel"
            android:textAlignment="center"
            android:textColor="@color/text_color_black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toStartOf="@id/alert_button_stop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_confirmation"
            app:layout_constraintWidth_max="300dp"
            app:strokeColor="@color/stroke_black"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/alert_button_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_stop"
            android:fontFamily="@font/silkscreen"
            android:text="@string/stop"
            android:textAlignment="center"
            android:textColor="@color/text_color_white"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@id/text_confirmation"
            app:layout_constraintStart_toEndOf="@id/alert_button_cancel"
            app:layout_constraintTop_toBottomOf="@id/text_confirmation"
            app:layout_constraintWidth_max="300dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>