<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_splashScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LauncherScreen">

    <LinearLayout
        android:id="@+id/layoutA"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white_background"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_chess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/press_start_2p"
            android:text="@string/text_chess"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/text_color_black"
            android:textSize="60sp" />

        <ImageView
            android:id="@+id/app_logo_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/app_logo_white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutB"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black_background"
        android:gravity="top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/app_logo_black" />

        <TextView
            android:id="@+id/text_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/press_start_2p"
            android:rotation="180"
            android:text="@string/text_timer"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/text_color_white"
            android:textSize="60sp" />

    </LinearLayout>

</LinearLayout>